  RemexHtml, which is the default, should be used instead.
* (T135963) You can now define a Content Security Policy for your wiki. This
  adds a defense-in-depth feature to stop an attacker who has found a bug in
  the parser allowing them to insert malicious attributes. Disabled by default,
  you can configure this via $wgCSPHeader and $wgCSPReportOnlyHeader.

=== New features in 1.32 ===
* (T112474) Generalized the ResourceLoader mechanism for overriding modules
  using a particular page during edit previews.
* Added 'ApiParseMakeOutputPage' hook.
* (T174313) Added checkbox on Special:ListUsers to display only users in
  temporary user groups.

=== External library changes in 1.32 ===
* …

==== Upgraded external libraries ====
* Updated QUnit from 2.4.0 to 2.6.0.

==== New external libraries ====
* …

==== Removed and replaced external libraries ====
* …

=== Bug fixes in 1.32 ===
* …

=== Action API changes in 1.32 ===
* Added templated parameters.
  * A module can define a templated parameter like "{fruit}-quantity", where
    the actual parameters recognized correspond to the values of a multi-valued
    parameter. Then clients can make requests like
    "fruits=apples|bananas&apples-quantity=1&bananas-quantity=5".
  * action=paraminfo will return templated parameter definitions separately
    from normal parameters. All parameter definitions now include an "index"
    key to allow clients to maintain parameter ordering when merging normal and
    templated parameters.
* It is now an error to submit too many values for a multi-valued parameter.
  This has generated a warning since MediaWiki 1.14.

=== Action API internal changes in 1.32 ===
* Added 'ApiParseMakeOutputPage' hook.
* Parameter names may no longer contain '{' or '}', as these are now used for
  templated parameters.

=== Languages updated in 1.32 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.