@@ -63,6 +63,10 @@ class SpecialCreateAccount extends LoginSignupSpecialPage {
 		$user = $this->getUser();
 		$status = AuthManager::singleton()->checkAccountCreatePermissions( $user );
 		if ( !$status->isGood() ) {
+			// track block with a cookie if it doesn't exists already
+			if ( $user->isBlockedFromCreateAccount() ) {
+				$user->trackBlockWithCookie();
+			}
 			throw new ErrorPageError( 'createacct-error', $status->getMessage() );
 		}
 	}
